# automata

./: .clang-format  CMakeLists.txt  README.md
cmake/: FindD3D11.cmake
src/: main.cpp
src/automata/: Conways.cpp  Conways.hpp  Elementary.cpp  Elementary.hpp  Fractal.cpp  Fractal.hpp  Gradient.cpp  Gradient.hpp  Grid.cpp  Grid.hpp  Julia.cpp  Julia.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Palette.cpp  Palette.hpp
src/imgui/: imgui.cpp  setup.cpp
src/utils/: LoadTextureFromData.cpp  LoadTextureFromData.hpp
src/windows/: TestWindow.cpp  TestWindow.hpp
